Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.5.0
-
Mac OS X 10.10.4, Xcode 6, Qt 5.5.0 (release)
-
-
9b8d0bffdafeb4dd9b256113716c07f2c49f3903
Description
ScrollView bounce is broken when using Macbook's Touchpad or Apple Magic Mouse on Mac OS X. It either scrolls too far away and sticks in that position, or the scrolling wraps around and continues from the bottom. ScrollView is almost unusable, please see the attached video.
Caused by this commit:
cd qtdeclaractive/
git revert a6ed830f4779e218b8e8f8d82dc4aa9b4b4528a1
Possibly related issue:
https://bugreports.qt.io/browse/QTBUG-44493
Attached is a test project. main.qml:
import QtQuick 2.3 import QtQuick.Controls 1.2 import QtQuick.Window 2.0 import QtQuick.Dialogs 1.2 ApplicationWindow { title: qsTr("Hello World") width: 640 height: 480 visible: true ScrollView { anchors.fill: parent flickableItem.interactive: true Flickable { interactive: true contentHeight: row.height contentWidth: row.width Row { id: row Repeater { model: 100 Column { Repeater { model: 100 Text { text: index } } } } } } } }
Attachments
Issue Links
- is duplicated by
-
QTBUG-53386 [Reg 5.7] Flickable misbehaves on OSX with trackpad
-
- Closed
-
- relates to
-
QTBUG-44514 ScrollView: don't need to correct for Flickable shortcomings anymore
-
- Closed
-
-
QTBUG-53177 Flickable: when flicking quickly with the Apple Trackpad, when it hits the end, it bounces twice
-
- Closed
-
-
QTBUG-56654 [iOS][REG 5.6.1->5.7.0] After scrolling in a ListView then the list can end up scrolling back to the bottom
-
- Closed
-
-
QTBUG-36771 Grabbing ListView (Flickable) while playing the rebound animation causes the flickable to jump
-
- Closed
-
-
QTBUG-55871 Flickable::movementEnded() not emitted when dragging on macOS
-
- Closed
-
- resulted from
-
QTBUG-22407 Scrolling qml Flickable on mac
-
- Closed
-
For Gerrit Dashboard: QTBUG-47697 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
109127,8 | ScrollView and Slider: Eliminate QQuickWheelArea | dev | qt/qtquickcontrols | Status: ABANDONED | 0 | 0 |
150300,5 | ScrollView and Slider: Eliminate QQuickWheelArea | 5.7 | qt/qtquickcontrols | Status: ABANDONED | -1 | 0 |
157863,5 | Flickable: start movementEndingTimer consistently only on OSX | 5.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |