Flickable: start movementEndingTimer consistently only on OSX

Amends 1929fee8e17e9ca66e7fe08faa9ed9fa7fdbb127 to prevent extra bounce
at the ends.

Task-number: QTBUG-47697
Task-number: QTBUG-53177
Change-Id: I23e63d8e0555e1503ff028ad2f0767b05ef39432
Reviewed-by: Jan Arve Sæther <jan-arve.saether@theqtcompany.com>